<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 LegacyXperia Project

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License version 2
     as published by the Free Software Foundation.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">LegacyXperia center</string>

    <string name="about_title">About</string>

    <string name="lx_website_title">LegacyXperia website</string>
    <string name="lx_website_summary">Find all the latest news here</string>
    <string name="lx_wiki_title">Wiki</string>
    <string name="lx_wiki_summary">FAQ, guides and much more!</string>
    <string name="lx_changelog_title">Changelog</string>
    <string name="lx_changelog_summary">View the changelog of LX builds</string>
    <string name="lx_source_title">Source</string>
    <string name="lx_source_summary">LegacyXperia is fully open source.\nSource at github.com/LegacyXperia</string>
    <string name="lx_donate_title">Donate</string>
    <string name="lx_donate_summary">Donate to LegacyXperia via PayPal</string>

    <string name="bugreport_title">Bug report</string>

    <string name="lx_bugreport_title">Collect all logs</string>
    <string name="lx_bugreport_summary">Collect all the needed logs for bug reporting.</string>
    <string name="report_infosuccess">Log collection was successful. You can find the zip file on your SD card in a directory called \"LX\". Please file an issue in the bug tracker and attach the zip.</string>
    <string name="report_infofail">Log collection failed, please try again.</string>
    <string name="lx_bugtracker_title">Bug tracker</string>
    <string name="lx_bugtracker_summary">You can report any issues regarding the ROM here.</string>
    <string name="ok">OK</string>
    <string name="system_prop_error">Cannot read system properties</string>
    <string name="sizer_message_sdnowrite">Cannot write to SD card</string>
</resources>
