<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 Slimroms http://www.slimroms.net
     Copyright (C) 2014 LegacyXperia Project

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License version 2
     as published by the Free Software Foundation.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="3dp"
        android:showDividers="beginning" >

        <TextView
            android:id="@+id/line1"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/lx_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_website" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:text="@string/lx_website_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            <TextView
                android:id="@+id/lx_website_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/lx_website_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/line2"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/lx_wiki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wiki" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:text="@string/lx_wiki_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            <TextView
                android:id="@+id/lx_wiki_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/lx_wiki_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/line3"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/lx_changelog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_changelog" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:text="@string/lx_changelog_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            <TextView
                android:id="@+id/lx_changelog_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/lx_changelog_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/line4"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/lx_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_github" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:text="@string/lx_source_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            <TextView
                android:id="@+id/lx_source_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/lx_source_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/line5"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/lx_donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_donate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:text="@string/lx_donate_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            <TextView
                android:id="@+id/lx_donate_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/lx_donate_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/line6"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>
